# opencv_matching

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  VersionInfo.rc.in  demo.cpp  py_demo.py
include/: matcher.h  template_matching.h
interface/: boyan_template_matching.h  boyanmatcher.h
matcher/: CMakeLists.txt  boyanmatcher.cpp  matcher.cpp  matcher_ctype.cpp
matcher/Pattern_Matching/: PatternMatching.cpp  PatternMatching.h
matcher/base_matcher/: base_matcher.cpp  base_matcher.h
